@@ -18,7 +18,6 @@ use Fcntl qw(:mode);
 
 # common functions
 my $prefix="@prefix@";
-my $datarootdir="@datarootdir@";
 require "@datadir@/rdup/shared.pl" or die "** Require \`shared.pl' failed";
 
 my $ts = time;
