@@ -3,7 +3,6 @@
 # create a restore of a backup in -b <dir>
 
 prefix=@prefix@
-datarootdir=@datarootdir@
 exec_prefix=@exec_prefix@
 datadir=@datadir@/rdup
 
