@@ -1,6 +1,7 @@
 xx yyy 2007: 0.3.7 Miek <miek@miek.nl>
   -- bugfixes --
-
+   * removed @datarootdir@ as this gives errors with older
+     autoconf versions
 
 26 Jan 2007: 0.3.6 Miek <miek@miek.nl>
   -- minor bugfixes --
